// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`newline-after-export applies fixes to default export 1`] = `
Object {
  "errorCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": "/Users/neil/Projects/personal/eslint-plugin-wyze/lib/rules/__tests__/fixtures/newline-after-export/default.js",
      "messages": Array [],
      "output": "
export default 1

const b = 2
",
      "warningCount": 0,
    },
  ],
  "warningCount": 0,
}
`;

exports[`newline-after-export applies fixes to named export 1`] = `
Object {
  "errorCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": "/Users/neil/Projects/personal/eslint-plugin-wyze/lib/rules/__tests__/fixtures/newline-after-export/named.js",
      "messages": Array [],
      "output": "
export const a = 1

const b = 2
",
      "warningCount": 0,
    },
  ],
  "warningCount": 0,
}
`;
